tests/baselines/reference/contextualTypingOfConditionalExpression2.errors.txt
tests/cases/compiler/contextualTypingOfConditionalExpression2.ts(11,5): error TS2322: Type '((a: C) => number) | ((b: number) => void)' is not assignable to type '(a: A) => void'.
  Type '(b: number) => void' is not assignable to type '(a: A) => void'.
    Types of parameters 'b' and 'a' are incompatible.
      Type 'A' is not assignable to type 'number'.


==== tests/cases/compiler/contextualTypingOfConditionalExpression2.ts (1 errors) ====
    class A {
        foo: number;
    }
    class B extends A {
        bar: number;
    }
    class C extends A {
        baz: number;
    }
    
    var x2: (a: A) => void = true ? (a: C) => a.foo : (b: number) => { };
        ~~
!!! error TS2322: Type '((a: {|C|0|}) => number) | ((b: number) => void)' is not assignable to type '(a: {|A|1|}) => void'.
!!! error TS2322:   Type '(b: number) => void' is not assignable to type '(a: {|A|2|}) => void'.
!!! error TS2322:     Types of parameters 'b' and 'a' are incompatible.
!!! error TS2322:       Type '{|A|3|}' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/contextualTypingOfConditionalExpression2.ts:7:7
!!! annotated symbol 1 tests/cases/compiler/contextualTypingOfConditionalExpression2.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/contextualTypingOfConditionalExpression2.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/contextualTypingOfConditionalExpression2.ts:1:7
    